# vtu-robo-advice

./: .gitignore  analysis.py  extract_decision_tree.py  generate.sh  processing.py  render.py
analysis/: Pipfile  README.md  analysis.py  downloader.py  extraction.py  generator.py  models.py  processing.py  render.py
analysis/graphs/: advice_sec_dep.dot
analysis/tenants-talk/: 10.html  11.html  14.html  15.html  16.html  20.html  22.html  25.html  27.html  3.html  30.html  33.html  34.html  35.html  36.html  37.html  38.html  4.html  41.html  42.html  43.html  7.html  9.html
analysis/trees/: evictions_tree.dot  evictions_tree.json  evictions_tree.tsv
app/: .firebaserc  README.md  package.json  tsconfig.json
app/src/: data.ts  generated-data.ts  index.tsx  template.html  types.ts
app/src/components/: Choice.tsx  Explainer.tsx  Home.tsx  Prompt.tsx
generator/: Cargo.toml  eviction_decision_tree.csv
generator/src/: main.rs
graphs/: advice_evictions.dot  advice_full.dot  render.sh
tenants-talk/: 1.html  12.html  13.html  17.html  18.html  19.html  2.html  21.html  23.html  24.html  25.html  26.html  28.html  29.html  31.html  32.html  39.html  40.html  44.html  5.html  6.html  8.html
