[package]
name = "decision-tree-generator"
version = "0.1.0"
authors = ["Victor Barua <victor.barua@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = "1.0.64"
